[package]
name = "mth"
version = "0.1.0"
authors = ["uncoder-fe"]
edition = "2018"

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
toml = "0.5.8"
chrono = "0.4.19"
pulldown-cmark = "0.8.0"
handlebars = "4.1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-staticfile = "0.6.0"
tokio = { version = "1.9.0", features = ["full"] }